<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/dialogBackground">

    <TextView
        android:layout_width="500sp"
        android:layout_height="wrap_content"
        android:text="@string/mathTreningGame_settings_title"
        android:textSize="25sp"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2a000000"
        android:padding="5sp"
        android:layout_margin="4sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mathTreningGame_settings_action"
            android:textSize="20sp"
            android:textColor="#DEDEDE" />

        <Spinner
            android:id="@+id/action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2a000000"
        android:padding="5sp"
        android:layout_margin="4sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mathTreningGame_settings_generation"
            android:textColor="#DEDEDE"
            android:textSize="20sp" />

        <LinearLayout
            android:padding="3sp"
            android:orientation="horizontal"
            android:background="#2a000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/mathTreningGame_settings_generation_number1" />

            <EditText
                android:id="@+id/n1min"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/mathTreningGame_settings_generation_min"
                android:maxLength="10"
                android:inputType="numberDecimal"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/n1max"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/mathTreningGame_settings_generation_max"
                android:maxLength="10"
                android:inputType="numberDecimal"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:padding="3sp"
            android:orientation="horizontal"
            android:background="#2a000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/mathTreningGame_settings_generation_number2" />

            <EditText
                android:id="@+id/n2min"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/mathTreningGame_settings_generation_min"
                android:maxLength="10"
                android:inputType="numberDecimal"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/n2max"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/mathTreningGame_settings_generation_max"
                android:maxLength="10"
                android:inputType="numberDecimal"
                android:importantForAutofill="no" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathTreningGame_settings_cancel"
            style="?android:attr/buttonStyle" />

        <Button
            android:id="@+id/save"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathTreningGame_settings_apply"
            style="?android:attr/buttonStyle" />
    </LinearLayout>
</LinearLayout>